Added extra style to navigation bar

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,7 +7,7 @@ a.navbar-brand {
   color: #fff;
 }
 
-ul.navbar-nav > li > a:hover {
+ul.navbar-nav > li > a:hover, ul.navbar-nav > li > a:focus {
   background-color: #090061;
 }
 
