--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
-  margin: 0;
+  margin-bottom: 60px;
   padding: 0;
   font-family: sans-serif;
 }
