Removed components for a refactor

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,6 +1,6 @@
 div.dark-about-card {
   box-shadow: 0 0 5px #ccc;
-  background-color: #0b00ec;
+  background-color: #07004E;
   color: #fff;
   padding: 10px;
 }
